--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,7 @@ celerybeat-schedule
 
 # Environments
 .env
+.env.local
 .venv
 env/
 venv/
@@ -122,3 +123,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# =============================================================================
+# Taurus Artifacts
+# =============================================================================
+artifacts/*
