refactor: migrate load tests to Molotov + Taurus workflow
Replace legacy single-file Molotov scenario with a structured Molotov + Taurus setup.

Key changes:
- Split load tests into api_loadtest.py (HTTP scenarios) and db_loadtest.py (DB extensions with setup/teardown).
- Align taurus.yml with Molotov executor semantics using script + extensions instead of setup-method/function.
- Remove obsolete entry points (main.py, molotov_scenario.py).
- Add debugpy support for VS Code debugging.
- Update dependencies to psycopg3 and redis client.
- Centralize API base URL in core.constants.
- Track Taurus result artifacts explicitly.

This brings the project in line with Molotov’s execution model, simplifies debugging, and enables clean Taurus-driven runs.

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,4 @@ dmypy.json
 # Taurus Artifacts
 # =============================================================================
 artifacts/*
+results.xml
