--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aio-pika>=9.5.8",
-    "aioredis>=2.0.1",
-    "asyncpg>=0.31.0",
     "bzt>=1.16.46",
+    "debugpy>=1.8.19",
+    "psycopg[binary,pool]>=3.3.2",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "redis>=7.1.0",
 ]
