perf: tune Molotov load test timing and add process scaling

--- a/taurus.yml
+++ b/taurus.yml
@@ -2,8 +2,9 @@ execution:
   - executor: molotov
     scenario: backend-load
     concurrency: 50
-    ramp-up: 1m
-    hold-for: 10s
+    ramp-up: 10s
+    hold-for: 60s
+    processes: 10
 
 scenarios:
   backend-load:
