--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,9 @@
 [project]
 name = "mock-dss-load-tests-taurus"
 version = "0.1.0"
-description = "Add your description here"
+description = "Load testing for digital signature service using Taurus, simulating real-world usage and performance scenarios."
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = "==3.8.10"
 dependencies = [
-    "aio-pika>=9.5.8",
-    "bzt>=1.16.46",
-    "debugpy>=1.8.19",
-    "psycopg[binary,pool]>=3.3.2",
-    "pydantic>=2.12.5",
-    "pydantic-settings>=2.12.0",
-    "redis>=7.1.0",
+    "bzt>=1.16.42",
 ]
