--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,99 @@
+aiodogstatsd==0.16.0.post0
+aiohappyeyeballs==2.4.4
+aiohttp==3.10.11
+aiosignal==1.3.1
+astunparse==1.6.3
+async-timeout==5.0.1
 attrs==23.2.0
 Babel==2.10.3
-bcc==0.29.1
+bcc==0.1.10
+bidict==0.23.1
 blinker==1.7.0
-Brlapi==0.8.5
+bzt==1.16.42
 certifi==2023.11.17
+cffi==1.17.1
 chardet==5.2.0
+charset-normalizer==3.4.4
 click==8.1.6
-cloud-init==25.2
 colorama==0.4.6
-command-not-found==0.3
+colorlog==6.10.1
 configobj==5.0.8
 cryptography==41.0.7
-cupshelpers==1.0
-defer==1.0.6
+cssselect==1.2.0
+defer==1.0.4
+dill==0.4.0
 distro==1.9.0
-distro-info==1.7+build1
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
+distro-info==1.0
 docopt==0.6.2
 flake8==7.0.0
-gyp==0.1
+frozenlist==1.5.0
+fuzzyset2==0.2.5
+h11==0.16.0
+hdrpy==0.3.3
 httplib2==0.20.4
+humanize==4.10.0
 idna==3.6
-iotop==0.6
+importlib-resources==6.4.5
+influxdb==5.3.2
 isort==5.6.4
 Jinja2==3.1.2
 jsonpatch==1.32
 jsonpointer==2.0
 jsonschema==4.10.3
-language-selector==0.1
 launchpadlib==1.11.0
 lazr.restfulclient==0.14.6
 lazr.uri==1.0.6
-louis==3.29.0
+lxml==6.0.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mccabe==0.7.0
 mdurl==0.1.2
+molotov==2.6
+msgpack==1.1.1
+multidict==6.1.0
+multiprocess==0.70.18
 netaddr==0.8.0
 netifaces==0.11.0
+numpy==1.24.4
 oauthlib==3.2.2
 olefile==0.46
 packaging==24.0
 pillow==10.2.0
+pkgutil-resolve-name==1.3.10
+progressbar33==2.4
+prompt-toolkit==3.0.52
+propcache==0.2.0
+psutil==7.2.1
 pycodestyle==2.11.1
+pycparser==2.23
 pyflakes==3.2.0
-Pygments==2.17.2
-PyGObject==3.48.2
+pygments==2.17.2
 PyJWT==2.7.0
 pyparsing==3.1.1
 pyrsistent==0.20.0
 pyserial==3.5
-python-apt==2.7.7+ubuntu5.1
 python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
 python-dotenv==1.0.1
+python-engineio==4.13.0
+python-socketio==5.16.0
 pytz==2024.1
 PyYAML==6.0.1
+rapidfuzz==3.9.7
 requests==2.31.0
 rich==13.7.1
-setuptools==68.1.2
+simple-websocket==1.1.0
 six==1.16.0
-systemd-python==235
+terminaltables==3.1.10
 texttable==1.6.7
 toml==0.10.2
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
-urllib3==2.0.7
+traitlets==5.14.3
+traittypes==0.2.3
+typing-extensions==4.10.0
+urllib3==1.26.17
+urwid==2.6.16
 wadllib==1.3.6
+wcwidth==0.2.14
 websocket-client==1.7.0
-wheel==0.42.0
-xkit==0.0.0
+wsproto==1.2.0
+yarl==1.15.2
+zipp==3.20.2
